--- a/css/styles.css
+++ b/css/styles.css
@@ -58,17 +58,18 @@ img {
 .header-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 .header-navigation {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .header-menu {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 
 .logo {
@@ -94,6 +95,23 @@ img {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: block;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.static-underline {
+  position: relative;
+  color: #404bbf;
+}
+.static-underline::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  border-radius: 2px;
+  background: #404bbf;
+  height: 4px;
+  left: 0;
+  bottom: -1px;
 }
 
 .header-menu-item:hover,
@@ -115,6 +133,9 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -128,6 +149,13 @@ img {
   background: #2e2f42;
   max-width: 100%;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .top-section-title {
@@ -143,6 +171,7 @@ img {
 }
 
 .top-section-button {
+  display: block;
   color: #ffffff;
   font-size: 16px;
   font-weight: 500;
@@ -151,13 +180,19 @@ img {
   background: #4d5ae5;
   cursor: pointer;
   padding: 16px 32px;
+  border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   min-width: 169px;
   height: 56px;
-  border: none;
   margin: 0 auto;
-  display: block;
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.top-section-button:hover {
+  background: #404bbf;
 }
 
 /* =========== ADVANTAGES ============= */
@@ -168,6 +203,18 @@ img {
 
 .advantages-title {
 }
+.advantages-icons-list {
+  display: flex;
+  gap: 24px;
+  margin-bottom: 8px;
+}
+.advantages-icons-item {
+  padding: 24px 100px;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: #f4f4fd;
+}
+
 .advantages-list {
   display: flex;
   gap: 24px;
@@ -192,7 +239,7 @@ img {
 /* =========== TEAM ============= */
 .team {
   padding-top: 120px;
-  background: #f4f4fd;
+  background-color: #f4f4fd;
 }
 
 .seaction-team-title {
@@ -241,6 +288,38 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
 }
+
+.soc-icons-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+.soc-icons-item {
+  width: 40px;
+  height: 40px;
+}
+.soc-icons-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.soc-icons-link:hover {
+  background-color: #404bbf;
+}
+
+.icon {
+  fill: #f4f4fd;
+}
 /* =========== PORTFOLIO ============= */
 
 .portfolio {
@@ -266,10 +345,46 @@ img {
 .portfolio-list-item {
   background: #fff;
   width: calc((100% - 48px) / 3);
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .portfolio-cover {
+  transform: translateY(0%);
 }
 
 .portfolio-item-image {
   max-width: 360px;
+}
+
+.portfolio-cover-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.portfolio-cover-wrap {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-cover {
+  position: absolute;
+  padding: 40px 32px 0 32px;
+  top: 0;
+  height: 100%;
+  background: #4d5ae5;
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .item-info {
@@ -300,6 +415,10 @@ img {
   padding: 100px 0;
 }
 
+.footer-container {
+  display: flex;
+  gap: 120px;
+}
 .logo {
   margin-bottom: 16px;
   display: inline-block;
@@ -314,4 +433,40 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+.footer-soc-container {
+}
+.footer-soc-text {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.footer-soc-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-soc-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-soc-icon {
+  fill: #f4f4fd;
+}
+.footer-soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-soc-link:hover {
+  background-color: #31d0aa;
 }
