--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ img {
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -147,8 +150,10 @@ img {
 
 .top-section {
   background: #2e2f42;
-  max-width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 188px 0;
+  background-position: center;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -186,13 +191,11 @@ img {
   min-width: 169px;
   height: 56px;
   margin: 0 auto;
-  transition-property: background;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .top-section-button:hover {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 
 /* =========== ADVANTAGES ============= */
@@ -203,16 +206,24 @@ img {
 
 .advantages-title {
 }
-.advantages-icons-list {
+.advantages-icon-list {
   display: flex;
   gap: 24px;
-  margin-bottom: 8px;
 }
-.advantages-icons-item {
-  padding: 24px 100px;
+.advantages-icon-item {
+  width: 100%;
+}
+
+.advantages-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+
   border-radius: 4px;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  background: #f4f4fd;
+  border: 1px solid #8e8f99;
+  background-color: #f4f4fd;
+  margin-bottom: 8px;
 }
 
 .advantages-list {
@@ -313,7 +324,8 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc-icons-link:hover {
+.soc-icons-link:hover,
+.soc-icons-link:focus {
   background-color: #404bbf;
 }
 
@@ -415,8 +427,13 @@ img {
   padding: 100px 0;
 }
 
+.footer-content {
+  margin-right: 120px;
+}
+
 .footer-container {
   display: flex;
+  align-items: baseline;
   gap: 120px;
 }
 .logo {
@@ -467,6 +484,7 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-soc-link:hover {
+.footer-soc-link:hover,
+.footer-soc-link:focus {
   background-color: #31d0aa;
 }
